# zeroproof-finance

./: README.md  proof_input.json  send_proof.sh
core/src/: lib.rs
financial-verify-rollup/: Cargo.toml  Dockerfile
financial-verify-rollup/core/: Cargo.toml
financial-verify-rollup/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
res/: financial.json
