[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
bincode = "1.3"
risc0-zkvm = { version = "1.2.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
zeroproof-core = { path = "./core" }
