[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
zeroproof-core = { path = "../core" }
risc0-zkvm = { version = "1.2.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3"
hex = "0.4"
